# SENA-c_sw

./: CONTRIBUTING.md  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: ci.yml
data/inputs/: c_sw_12x24.nc  c_sw_24x24.nc  c_sw_48x24.nc  c_sw_48x48.nc
ref/: CMakeLists.txt  README.md  build.sh
ref/cmake/: FindGPTL.cmake  FindNetCDF.cmake  c_sw_compiler_flags.cmake  compiler_flags_GNU_C.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_C.cmake  compiler_flags_Intel_Fortran.cmake
ref/src/: CMakeLists.txt  EqualTest.F90  isEqual.f90  netCDFModule.f90  print_affinity.c  runnable.c  sw_core.F90  sw_driver.F90  sw_driver.f90
ref/test/: CMakeLists.txt
ref/test/test_input/: c_sw_12x24.nl  c_sw_24x24.nl  c_sw_48x24.nl  c_sw_48x48.nl
ref/test/test_output/: c_sw_12x24.test  c_sw_24x24.test  c_sw_48x24.test  c_sw_48x48.test
ref/test/tools/: CMakeLists.txt  compare.sh
ref/test/utilityfunctions/: EqualTest.F90  isEqual.f90  isequalmodule.mod
